[package]
name = "nanobot_control_system"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto = "0.17.0"
ring = "0.16"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
prometheus = "0.13"
warp = "0.3"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }

